# geometry

./: Cargo.toml  README.md
boot/: Cargo.toml
boot/src/: lib.rs  run.rs  star_wars.rs
boot/src/constants/: global_config.rs  mod.rs
boot/src/dbs/: mod.rs  star_wars.rs
boot/src/entity/: user.rs
boot/src/gql/: mod.rs  mutations.rs  queries.rs
boot/src/models/: carrier.rs  character.rs  droid.rs  human.rs  mod.rs
boot/src/services/: carrier.rs  droid.rs  human.rs  mod.rs
boot/src/typings/: common.rs  mod.rs  state.rs
boot/src/utils/: global_config.rs  mod.rs  query_characters.rs
