[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
features = "0.10.0"
async-std = {version = "1.12", features = ["attributes"]}
tide = "0.16.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-graphql-tide = "2.0"
async-graphql-actix-web = "2.0"
actix-web = "4"
async-graphql =  {version = "2.0", features = ["bson", "chrono"]}
serde = {version = "1.0.152", features = ["derive"]}
slab = "0.4.7"